--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -20,7 +20,7 @@ jobs:
 
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'latest'
+          flutter-version: '3.16.3'
           channel: 'stable'
           cache: true
 
