--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -25,7 +25,7 @@ jobs:
           cache: true
 
       - name: Install dependencies
-        run: flutter pub get
+        run: flutter packages get
 
       # Uncomment this step to verify the use of 'dart format' on each commit.
       # - name: Verify formatting
