--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -7,19 +7,32 @@ name: Flutter Mobile App
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "Developpement", "*cicd*" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "Developpement" ]
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-
-      - uses: subosito/flutter-action@v2
+      - name: Checkout code
+        uses: actions/checkout@v3
+        
+      - name: Set up flutter
+        uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.16.3'
           channel: 'stable'
           cache: true
+
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Flutter test
+        run: flutter test
+
+      - name: Build APK
+        run: flutter build apk
+      
+    
