CI : Update add deploy for release creation

--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -8,6 +8,8 @@ name: Flutter Mobile App
 on:
   push:
     branches: [ "main", "Developpement", "*cicd*" ]
+    tags: 
+      - "*"
   pull_request:
     branches: [ "main", "Developpement" ]
 
@@ -34,5 +36,37 @@ jobs:
 
       - name: Build APK
         run: flutter build apk
+      
+      - name: Archive artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: apk
+          path: build/${{ github.repository }}/outputs/flutter-apk/${{ github.repository }}.apk
+          
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')
+
+    steps:
+      - name: Download Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: apk
+          path: build
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+            Automated release created
+          draft: false
+          prerelease: false
+    
       
     
