--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -13,6 +13,9 @@ on:
   pull_request:
     branches: [ "main", "Developpement" ]
 
+env:
+  BUILD_PATH: 'build\app\outputs\flutter-apk\app-release.apk'
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -41,7 +44,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: apk
-          path: build/${{ github.repository }}/outputs/flutter-apk/${{ github.repository }}.apk
+          path: $BUILD_PATH
           
   deploy:
     needs: build
