--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -13,12 +13,11 @@ on:
   pull_request:
     branches: [ "main", "Developpement" ]
 
-env:
-  BUILD_PATH: 'build/app/outputs/flutter-apk/release/app-release.apk'
-
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      BUILD_PATH: 'build/app/outputs/flutter-apk/release/app-release.apk'
 
     steps:
       - name: Checkout code
@@ -44,7 +43,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: apk
-          path: $BUILD_PATH
+          path: ${{ env.BUILD_PATH }}
           
   deploy:
     needs: build
