--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -60,8 +60,6 @@ jobs:
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
@@ -69,6 +67,7 @@ jobs:
             Automated release created
           draft: false
           prerelease: false
+          token: ${{ secrets.GITHUB_TOKEN }}
     
       
     
