--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -8,7 +8,7 @@ name: Flutter Mobile App
 on:
   push:
     branches: [ "main", "Developpement", "*cicd*" ]
-    tags: 
+    tags:
       - "*"
   pull_request:
     branches: [ "main", "Developpement" ]
@@ -22,7 +22,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        
+
       - name: Set up flutter
         uses: subosito/flutter-action@v2
         with:
@@ -38,13 +38,13 @@ jobs:
 
       - name: Build APK
         run: flutter build apk
-      
+
       - name: Archive artifacts
         uses: actions/upload-artifact@v2
         with:
           name: apk
           path: ${{ env.BUILD_PATH }}
-          
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -57,6 +57,13 @@ jobs:
           name: apk
           path: build
 
+      - name: Generate a token
+        id: generate-token
+        uses: actions/create-github-app-token@v1
+        with:
+          app-id: ${{ secrets.CUSTOM_APP_ID }}
+          private-key: ${{ secrets.CUSTOM_API_SECRET }}
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -67,7 +74,4 @@ jobs:
             Automated release created
           draft: false
           prerelease: false
-          token: ${{ secrets.GITHUB_TOKEN }}
-    
-      
-    
+          token: ${{ steps.generate-token.outputs.token }}
