--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -57,14 +57,10 @@ jobs:
           name: apk
           path: build
 
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+      - name: Push to release
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: ncipollo/release-action@v1
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            Automated release created
-          draft: false
-          prerelease: false
+          artifacts: "build/app/outputs/apk/release/*"
+          tag: "${{ github.ref_name }}"
           token: ${{ secrets.CUSTOM_API_SECRET }}
