--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -37,29 +37,13 @@ jobs:
         run: flutter test
 
       - name: Build APK
-        run: flutter build apk
-
-      - name: Archive artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: apk
-          path: ${{ env.BUILD_PATH }}
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
-
-    steps:
-      - name: Download Artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: apk
-          path: build
+        run: flutter build apk --split-per-abi
 
       - name: Push to release
+        if: startsWith(github.ref, 'refs/tags/v')
         uses: ncipollo/release-action@v1
         with:
           artifacts: "build/app/outputs/apk/release/*"
           tag: "${{ github.ref_name }}"
           token: ${{ secrets.CUSTOM_API_SECRET }}
+
